manifests/maas/platform/kuadrant-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kuadrant-system
  labels:
    app.kubernetes.io/part-of: ocp-datalake-maas
