manifests/maas/platform/authorino-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authorino-authorino-authorization
  namespace: kuadrant-system
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: authorino-server-cert
spec:
  ports:
    - name: grpc
      port: 50051
      protocol: TCP
      targetPort: 50051
    - name: http
      port: 5001
      protocol: TCP
      targetPort: 5001
  selector:
    authorino-resource: authorino
  type: ClusterIP
